# GeoFPS

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  STEP2_NOTES.txt  imgui.ini
BlenderFolder/: Cookie.blend  Cookie.glb  Cookie.mtl  Cube.blend  Cube.blend1  Cube.glb  TowerV1.blend  TowerV1.blend1  TowerV2.blend  TowerV2.blend1  TowerV2.glb  WTG.blend  WTG.blend1  WTGV1.glb  import_geofps_profile.py  multipleSquares.blend  multipleSquares.blend1  multipleSquares.glb
RawData/: How_To_Use_Split.txt  convert_esri_ascii_to_terrain_csv.py  geofps_dataset_manifest.example.json  prepare_geofps_dataset.py  split_terrain_csv_to_tiles.py
SystemDump/: Sample of GeoFPS.txt
assets/data/: sample_terrain.csv
assets/datasets/: Lisbon and LisbonPart2 Coordinates.txt
assets/datasets/Lisbon/terrain_tiles/: tile_0000_0000.csv  tile_0000_0001.csv  tile_0000_0002.csv  tile_0000_0003.csv  tile_0000_0004.csv  tile_0000_0005.csv  tile_0000_0006.csv  tile_0000_0007.csv  tile_0000_0008.csv  tile_0000_0009.csv  tile_0000_0010.csv  tile_0000_0011.csv  tile_0001_0000.csv  tile_0001_0001.csv  tile_0001_0002.csv  tile_0001_0003.csv  tile_0001_0004.csv  tile_0001_0005.csv  tile_0001_0006.csv  tile_0001_0007.csv  tile_0001_0008.csv  tile_0001_0009.csv  tile_0001_0010.csv  tile_0001_0011.csv  tile_0002_0000.csv  tile_0002_0001.csv  tile_0002_0002.csv  tile_0002_0003.csv  tile_0002_0004.csv  tile_0002_0005.csv  tile_0002_0006.csv  tile_0002_0007.csv  tile_0002_0008.csv  tile_0002_0009.csv  tile_0002_0010.csv  tile_0002_0011.csv  tile_0003_0000.csv  tile_0003_0001.csv  tile_0003_0002.csv  tile_0003_0003.csv  (+57 more)
assets/datasets/LisbonPart2/LisbonPart2Tiles/: tile_0000_0000.csv  tile_0000_0001.csv  tile_0000_0002.csv  tile_0000_0003.csv  tile_0000_0004.csv  tile_0000_0005.csv  tile_0000_0006.csv  tile_0000_0007.csv  tile_0000_0008.csv  tile_0000_0009.csv  tile_0000_0010.csv  tile_0000_0011.csv  tile_0000_0012.csv  tile_0000_0013.csv  tile_0000_0014.csv  tile_0000_0015.csv  tile_0000_0016.csv  tile_0000_0017.csv  tile_0000_0018.csv  tile_0000_0019.csv  tile_0000_0020.csv  tile_0000_0021.csv  tile_0000_0022.csv  tile_0000_0023.csv  tile_0000_0024.csv  (+396 more)
assets/shaders/: asset.frag  asset.vert  line.frag  line.vert  sky.frag  sky.vert  terrain.frag
assets/worlds/: blender_assets_template_copy.txt  world_template_V2.geofpsworld
docs/: BLENDER_GLB_EXPORT_CHECKLIST.md  DATA_PIPELINE.md  TODO.md  WORLD_AND_ASSET_FORMATS.md
src/: main.cpp
src/Assets/: AnimationData.h  GltfImporter.cpp  GltfImporter.h  ObjImporter.cpp  ObjImporter.h
src/Core/: Application.cpp  Application.h  ApplicationInternal.h  ApplicationPersistence.cpp  ApplicationScene.cpp  ApplicationUI.cpp  ApplicationUIAssetPlacement.cpp  ApplicationUIAssets.cpp  ApplicationUIDiagnostics.cpp  ApplicationUIHelpers.h  ApplicationUILighting.cpp  ApplicationUIMenu.cpp  BackgroundJobQueue.cpp  BackgroundJobQueue.h  NativeFileDialog.cpp  NativeFileDialog.h  NativeFileDialog.mm  Window.cpp  Window.h  WorldFileParser.cpp  WorldFileParser.h
src/Game/: CameraCommand.cpp  CameraCommand.h  FPSController.cpp  FPSController.h
src/Mapping/: GeoImage.h
src/Math/: GeoConverter.cpp  GeoConverter.h
src/Renderer/: AnimatedMesh.cpp  AnimatedMesh.h  Camera.cpp  Camera.h  IRenderer.h  Mesh.cpp  Mesh.h  OpenGLRenderer.cpp  OpenGLRenderer.h  RenderOrigin.cpp  RenderOrigin.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
src/Terrain/: TerrainImporter.cpp  TerrainImporter.h  TerrainIsolineMetal.mm  TerrainMeshBuilder.cpp  TerrainMeshBuilder.h  TerrainPoint.h  TerrainProfile.cpp  TerrainProfile.h
tests/: TerrainProfileTests.cpp
(+266 files in other folders)
